manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-argo-web
  labels:
    app: test-argo
    component: web
    layer: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-argo
      component: web
      layer: application
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: test-argo
        component: web
        layer: application
        app.kubernetes.io/version: production
      name: test-argo-web
    spec:
      containers:
      - name: test-argo-web
        image: 527742668712.dkr.ecr.us-east-1.amazonaws.com/test-argo:test-app-v3
        ports:
        - name: sandbox-http
          containerPort: 8080
        readinessProbe:
          httpGet:
            port: sandbox-http
            path: /ping
            httpHeaders:
              - name: X-Forwarded-Proto
                value: https
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
