manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-argo
    component: web
    layer: application
  name: test-argo-web-internal
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: http
    targetPort: sandbox-http
  selector:
    app: test-argo
    layer: application
    component: web
  type: ClusterIP
