manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-argo
spec:
  ingressClassName: nginx
  rules:
  - host: test-argo.columbia.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-argo-web-internal
            port:
              name: http
